Fix gallery pages with only vimeo videos from being too narrow
The 'Snow Globe' page, which only has a vimeo video, made the page
too narrow. I haven't really worked out why, but to fix it make
the #page-content 100%. Header also needed to be adjusted otherwise
a horizontal scrollbar would appear.

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
     max-width: 1300px;
     margin-left: auto;
     margin-right: auto;
+    width: 100%;
 }
 
 #page-content p:first-of-type:not(:only-of-type) {
